--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/nextjs",
+  "name": "nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,32 +13,35 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "^0.1.0",
-    "@acme/auth": "^0.1.0",
-    "@acme/db": "^0.1.0",
-    "@acme/tailwind-config": "^0.1.0",
+    "@facets/api": "^0.1.0",
+    "@facets/auth": "*",
+    "@facets/db": "*",
+    "@facets/ui": "*",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
     "@trpc/react-query": "^10.20.0",
     "@trpc/server": "^10.20.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "superjson": "1.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.1.0",
+    "@facets/eslint-config": "*",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.38.0",
-    "postcss": "^8.4.22",
-    "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   }
 }
