--- a/package.json
+++ b/package.json
@@ -17,23 +17,18 @@
     "type-check": "turbo type-check"
   },
   "dependencies": {
-    "@acme/eslint-config": "^0.1.0",
+    "eslint-config": "^0.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@manypkg/cli": "^0.20.0",
     "@types/prettier": "^2.7.2",
     "eslint": "^8.38.0",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
     "turbo": "^1.9.3",
     "typescript": "^5.0.4"
   },
   "packageManager": "yarn@1.22.19",
   "workspaces": [
-    "apps/expo",
-    "apps/nextjs",
-    "packages/api",
-    "packages/auth",
-    "packages/db",
-    "packages/config/*"
+    "apps/*",
+    "packages/*"
   ]
 }
