--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/auth",
+  "name": "@facets/auth",
   "version": "0.1.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -11,16 +11,18 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/db": "^0.1.0",
+    "@facets/db": "*",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.1.0",
     "eslint": "^8.38.0",
+    "eslint-config": "^0.1.0",
     "typescript": "^5.0.4"
   }
 }
