--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -17,6 +17,7 @@
     "@facets/auth": "*",
     "@facets/db": "*",
     "@facets/ui": "*",
+    "@radix-ui/react-popover": "^1.0.5",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
@@ -28,6 +29,7 @@
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
