--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,6 +18,7 @@
     "@facets/db": "*",
     "@facets/ui": "*",
     "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-radio-group": "^1.1.2",
     "@tanstack/react-query": "^4.29.2",
     "@trpc/client": "^10.20.0",
     "@trpc/next": "^10.20.0",
@@ -30,6 +31,7 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
