--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,7 +25,9 @@
     "typescript": "^4.7"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.1",
     "@stitches/react": "^1.2.8",
     "formik": "^2.2.9",
     "react-dom": "^18.2.0",
