--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,8 @@ NEXTAUTH_URL=http://localhost:3000
 # @see https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=supersecret
 
-# Preconfigured Discord OAuth provider, works out-of-the-box
-# @see https://next-auth.js.org/providers/discord
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+BUCKET_NAME=
+REGION=
