--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,7 @@
     "@trpc/react-query": "^10.20.0",
     "@trpc/server": "^10.20.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.3.0",
@@ -33,6 +34,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
     "superjson": "1.9.1",
